@@ -1,0 +1,5 @@
+#ifndef HAD_MKNAME_H
+
+const char *mkname(const char *);
+
+#endif /* mkname.h */
